[project]
name = "mechvibes-lite"
version = "0.2.0"
description = "A lightweight backend for Mechvibes."
readme = "README.md"
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
requires-python = ">=3.10"
dependencies = [
    "evdev>=1.7.1 ; sys_platform == 'linux'",
    "keyboard>=0.13.5 ; sys_platform == 'win32'",
    "pyglet>=2.0.20",
    "websockets>=14.1",
]

[project.scripts]
mvibes = "mechvibes_lite.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
]
